# devmanager

./: .gitattributes  .gitignore  Cargo.toml  README.md  Terminal.md  build.rs  dev-watch.ps1  package-lock.json  package.json  run.bat  vite.config.ts  watch.bat
.github/workflows/: release.yml  web-bundle.yml
.superpowers/sdd/: browser-task-5b-report.md  browser-task-5c-checkpoints.md  browser-task-5c-report.md  progress.md
docs/: REMOTE_MOBILE_WEB.md  browser-automation.md  native-ui-system.md
docs/superpowers/plans/: 2026-04-16-browser-activity-log.md  2026-07-09-ssh-key-auth-and-scrollbar.md  2026-07-13-host-work-lease-followup.md  2026-07-13-native-mobile-web-interface.md  2026-07-13-pre-live-release-hardening.md  2026-07-13-push-intent-reconciliation.md  2026-07-13-pwa-build-bound-draft-handoff.md  2026-07-13-pwa-remediation.md  2026-07-13-pwa-review-remediation.md  2026-07-13-task3-backend-remediation.md  2026-07-14-native-session-reconnect.md  2026-07-14-native-transcript-and-process-monitor.md  2026-07-15-codex-web-composer-delivery-fix.md  2026-07-15-native-slash-command-experience.md  2026-07-17-browser-replay-domain.md  2026-07-17-browser-replay-executor.md  2026-07-17-browser-replay-secrets.md  2026-07-17-codex-hooks-launch-tap.md  2026-07-17-pwsh-shell-option.md  2026-07-18-browser-locator-repair.md  2026-07-18-browser-workflow-mcp-lifecycle.md  2026-07-21-developer-environment-diagnostics.md  2026-07-21-live-first-semantic-sessions.md  2026-07-21-native-llm-chat-perfection.md
docs/superpowers/specs/: 2026-04-16-browser-activity-log-design.md  2026-04-16-rust-lint-baseline-design.md  2026-07-06-ssh-key-or-password-auth-design.md  2026-07-13-native-mobile-web-interface-design.md  2026-07-13-pwa-build-bound-draft-handoff-design.md  2026-07-13-pwa-review-remediation-design.md  2026-07-14-native-session-reconnect-design.md  2026-07-14-native-transcript-and-process-monitor-design.md  2026-07-15-codex-web-composer-delivery-fix-design.md  2026-07-15-native-slash-command-experience-design.md  2026-07-17-browser-replay-domain-design.md  2026-07-17-browser-replay-executor-design.md  2026-07-17-browser-replay-secrets-design.md  2026-07-17-codex-hooks-launch-tap-design.md  2026-07-17-pwsh-shell-option-design.md  2026-07-18-browser-locator-repair-design.md  2026-07-21-developer-environment-diagnostics-design.md
examples/: generate_pwa_icons.rs
scripts/: release.sh
src/: App.tsx  assets.rs  icons.rs  index.css  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: config.rs  env.rs  mod.rs  ports.rs  process.rs  pty.rs  resources.rs  runtime.rs  scanner.rs  session.rs  terminal.rs
src-tauri/src/models/: config.rs
src-tauri/src/services/: config_service.rs  mod.rs  pid_file.rs  platform.rs  process_manager.rs  resource_service.rs  scanner_service.rs  session_service.rs
src/ai/: claude_hooks.rs  codex_bridge.rs  codex_cli.rs  codex_hooks.rs  codex_rollout.rs  mod.rs
src/app/: chrome.rs  mod.rs  process_monitor.rs
src/browser/: annotations.rs  attachments.rs  automation.rs  commands.rs  downloads.rs  gateway.rs  mcp.rs  mod.rs  model.rs  operation_queue.rs  pane.rs  policy.rs  provider.rs  recipes.rs  recording.rs  recording_coordinator.rs  recording_ipc.rs  recording_mcp.rs  replay.rs  replay_executor.rs  replay_repair.rs  replay_secrets.rs  resources.rs  storage.rs  workflow_mcp.rs
src/browser/host/: initialization.rs  mod.rs  unsupported.rs  windows.rs
src/diagnostics/: catalog.rs  mod.rs  model.rs  preview.rs  probe.rs  profile.rs  repair.rs  resolve.rs  runner.rs  windows.rs
src/git/: git_service.rs  git_ui.rs  mod.rs
src/hooks/: useConfig.ts  useProcess.ts  usePty.ts  useSessionRestore.ts  useUpdateCheck.ts
src/models/: config.rs  mod.rs
src/notifications/: mod.rs
src/persistence/: mod.rs
src/remote/: access_log.rs  client_pool.rs  mod.rs  presentation.rs  transport.rs
src/services/: env_service.rs  mod.rs  pid_file.rs  platform_service.rs  ports_service.rs  process_manager.rs  process_ops.rs  pwsh_probe.rs  scanner_service.rs  session_manager.rs
src/sidebar/: mod.rs
src/state/: app_state.rs  mod.rs  runtime_state.rs
src/stores/: appStore.ts  processStore.ts
src/terminal/: mod.rs  session.rs  view.rs
src/theme/: mod.rs
src/types/: config.ts
src/updater/: mod.rs
src/utils/: notificationSound.ts  projectHelpers.ts  runtimePlatform.ts  tabTitles.ts  tauriListeners.ts  terminalBuffers.ts  terminalSize.ts
src/workspace/: editor_ui.rs  mod.rs
tests/: ai_restore.rs  browser_annotations.rs  browser_attachment_lifecycle.rs  browser_automation.rs  browser_core.rs  browser_fixture.rs  browser_gateway.rs  browser_host.rs  browser_pane.rs  browser_provider.rs  browser_recipes.rs  browser_recording.rs  browser_recording_ipc.rs  browser_recording_mcp.rs  browser_replay.rs  browser_replay_executor.rs  browser_replay_repair.rs  browser_replay_secrets.rs  browser_secret_prompt.rs  browser_workflow_coordinator.rs  browser_workflow_lifecycle.rs  browser_workflow_mcp.rs  browser_workflow_pane.rs  browser_workflow_review_ui.rs  claude_hooks.rs  config_legacy.rs  config_persistence.rs  diagnostics_lifecycle.rs  legacy_loader.rs  scanner_onboarding.rs  server_restore.rs  ssh_private_key.rs  ssh_restore.rs  terminal_pending_annotations.rs  updater.rs
tests/fixtures/: latest.json  legacy-config.json  legacy-session.json
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
web/bundle/: index.html  manifest.webmanifest  source-fingerprint.txt  sw.js
web/config/: sourceFingerprint.test.ts  sourceFingerprint.ts
web/src/: App.tsx  index.css  main.tsx  sw.ts
zz-archive/tauri-react-v0.1.11/: index.html  package-lock.json  package.json  tsconfig.node.json
(+261 files in other folders)
