[package]
name = "devmanager"
version = "0.2.0"
edition = "2021"
description = "Native GPUI rewrite of DevManager"
license = "Apache-2.0"

[dependencies]
alacritty_terminal = "0.25.1"
dirs = "6.0.0"
gpui = "0.2.2"
portable-pty = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[package.metadata.packager]
product-name = "DevManager"
identifier = "com.userfirst.devmanager"
before-packaging-command = "cargo build --release"
out-dir = "packager"
publisher = "UserFirst"
