[package]
name = "devmanager"
version = "0.3.5"
edition = "2021"
description = "Native GPUI rewrite of DevManager"
license = "Apache-2.0"

[dependencies]
alacritty_terminal = "0.25.1"
arboard = "3.6.1"
cargo-packager-resource-resolver = "0.1.2"
cargo-packager-updater = "0.2.3"
dirs = "6.0.0"
gpui = "0.2.2"
portable-pty = "0.9.0"
regex = "1.12.3"
rfd = "0.17.2"
rmcp = { version = "=2.2.0", features = ["server", "transport-streamable-http-server"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
sysinfo = "0.38.4"
time = { version = "0.3.47", features = ["formatting", "local-offset"] }
toml = "1.0.7"
ureq = { version = "3", features = ["json"] }
url = "2.5.8"
image = "0.25"
rmp-serde = "1.3.0"
rcgen = "0.13.2"
rustls = { version = "0.23.18", features = ["ring"] }
rustls-pemfile = "2.2.0"
sha2 = "0.10.9"
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "sync", "io-util", "macros", "time", "process"] }
tokio-tungstenite = { version = "=0.24.0", default-features = false, features = ["connect", "handshake"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
rust-embed = { version = "8", features = ["include-exclude"] }
mime_guess = "2"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
hmac = "0.12"
base64 = "0.22"
futures-util = "0.3"
web-push-native = "=0.4.0"
getrandom = "0.3.4"
zeroize = { version = "1.8", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
raw-window-handle = "0.6"
wry = { version = "=0.55.1", default-features = false, features = ["devtools", "protocol", "os-webview"] }
webview2-com = "=0.38.2"
windows = { version = "=0.61.3", features = ["Win32_Storage_FileSystem"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dev-dependencies]
rmcp = { version = "=2.2.0", features = ["client", "transport-streamable-http-client-reqwest"] }
static_assertions = "1.1.0"

[package.metadata.packager]
product-name = "DevManager"
identifier = "com.userfirst.devmanager"
before-packaging-command = "cargo build --release"
authors = ["UserFirst"]
copyright = "Copyright (c) UserFirst"
description = "Native GPUI workspace and terminal manager for projects, servers, AI sessions, and SSH."
icons = [
    "packaging/icons/devmanager-32.png",
    "packaging/icons/devmanager-128.png",
    "packaging/icons/devmanager-256.png",
    "packaging/icons/devmanager-512.png",
    "packaging/icons/devmanager.ico",
]
resources = ["assets", "third_party/ghostty"]
long-description = "DevManager is the native GPUI rewrite of the archived Tauri app. It keeps local project orchestration, server tabs, AI terminals, SSH sessions, config import/export, and a signed update path in a single desktop shell."
out-dir = "dist/packager"
publisher = "UserFirst"
